--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -1,11 +1,9 @@
 {% extends "blog/base.html" %}
-{% load static %}
-
 {% block content %}
-<h2>Register</h2>
+<h1>{% if form.instance.pk %}Edit Post{% else %}Create Post{% endif %}</h1>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Register</button>
+    <button type="submit">Save</button>
 </form>
 {% endblock %}
