--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,10 +1,25 @@
-{% extends "blog/base.html" %}
-{% block content %}
-<h1>{{ post.title }}</h1>
-<p>By {{ post.author }} on {{ post.published_date }}</p>
-<p>{{ post.content }}</p>
-{% if user == post.author %}
-    <a href="{% url 'post_update' post.id %}">Edit</a>
-    <a href="{% url 'post_delete' post.id %}">Delete</a>
+<div class="comments-section">
+    <h3>Comments</h3>
+    {% for comment in post.comments.all %}
+        <div class="comment">
+            <p><strong>{{ comment.author }}</strong> ({{ comment.created_at|date:"d M Y H:i" }})</p>
+            <p>{{ comment.content }}</p>
+            {% if user == comment.author %}
+                <a href="{% url 'edit_comment' comment.id %}">Edit</a> |
+                <a href="{% url 'delete_comment' comment.id %}">Delete</a>
+            {% endif %}
+        </div>
+    {% empty %}
+        <p>No comments yet. Be the first to comment!</p>
+    {% endfor %}
+</div>
+
+{% if user.is_authenticated %}
+    <form method="post" action="{% url 'add_comment' post.id %}">
+        {% csrf_token %}
+        {{ comment_form.as_p }}
+        <button type="submit">Post Comment</button>
+    </form>
+{% else %}
+    <p><a href="{% url 'login' %}">Log in</a> to leave a comment.</p>
 {% endif %}
-{% endblock %}
