--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -13,6 +13,16 @@
         <p>No comments yet. Be the first to comment!</p>
     {% endfor %}
 </div>
+<div class="tags">
+    <h5>Tags:</h5>
+    <ul>
+        {% for tag in post.tags.all %}
+            <li><a href="{% url 'posts_by_tag' tag.slug %}">{{ tag.name }}</a></li>
+        {% empty %}
+            <li>No tags</li>
+        {% endfor %}
+    </ul>
+</div>
 
 {% if user.is_authenticated %}
     <form method="post" action="{% url 'add_comment' post.id %}">
